[package]
name = "leghorn"
version = "0.1.0"
authors = ["Phil Shafer <phil@juise.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bin]]
name = "leghorn"

[[example]]
name = "example01"

[dependencies]
sxd-document = "*"
sxd-xpath = "*"
snafu = "*"
libc = "*"
toml = "*"

